syntax = "proto3";

package commentService;

option go_package = "./proto;commentService";

service CommentService {
	rpc CountFromVideoId(IdReq) returns (CountRsp) {}
	rpc Send(CommentReq) returns (CommentRsp) {}
	rpc Delete(IdReq) returns (DelRsp) {}
	rpc GetList(VideoUserReq) returns (CommentListRsp) {}
}

message IdReq{
	int64 id = 1;
}

message CountRsp{
	int64 status_code = 1;
	string status_msg = 2;
	int64 count = 3;
}

message Comment{
	int64 id = 1;
	int64 userId = 2;
	int64 videoId = 3;
	string commentText = 4;
	string createDate = 5;
	int64 cancel = 6;
}


message FeedUser{
	int64 id = 1;
	string name = 2;
	int64 followCount = 3;
	int64 followerCount = 4;
	bool isFollow	= 5;
	int64 totalFavorited = 6;
	int64 favoriteCount = 7;
}

message CommentInfo {
	int64 id = 1;
	FeedUser userInfo = 2;
	string content = 3;
	string createDate = 4;
}

message CommentReq {
	Comment comment = 1;
}

message CommentRsp{
	int64 status_code = 1;
	string status_msg = 2;
	CommentInfo commentInfo = 3;
}

message DelRsp{
	int64 status_code = 1;
	string status_msg = 2;
}

message VideoUserReq{
	int64 videoId = 1;
	int64 userId = 2;
}

message CommentListRsp{
	int64 status_code = 1;
	string status_msg = 2;
	repeated CommentInfo commentInfo = 3;
}


